--- a/lesson01/app/index.html
+++ b/lesson01/app/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Websockets</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
     <script defer src="app.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form>
-        <input type="text" placeholder="Your message">
-        <button>Send</button>
+      <input type="text" placeholder="Your message" />
+      <button>Send</button>
     </form>
     <ul></ul>
-</body>
-
+  </body>
 </html>
